--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -28,10 +28,11 @@ refs:
               /bin/bash -c "$(curl -fsSL https://raw.githubusercontent.com/Homebrew/install/HEAD/install.sh)"
               brew install --cask dotnet-sdk
           elif [[ $OSTYPE == linux* ]]; then
-              wget https://packages.microsoft.com/config/ubuntu/22.04/packages-microsoft-prod.deb -O packages-microsoft-prod.deb
+            wget https://packages.microsoft.com/config/ubuntu/22.04/packages-microsoft-prod.deb -O packages-microsoft-prod.deb
             sudo dpkg -i packages-microsoft-prod.deb
             sudo apt-get update
             sudo apt-get install -y dotnet-sdk-8.0
+            sudo rm packages-microsoft-prod.deb
           fi
     - &InstallDotnetLinux
       run:
@@ -41,6 +42,7 @@ refs:
           sudo dpkg -i packages-microsoft-prod.deb
           sudo apt-get update
           sudo apt-get install -y dotnet-sdk-8.0
+          sudo rm packages-microsoft-prod.deb
     - &InstallDotnetMacos
       run:
         name: Install dotnet
