--- a/lib/bootstrap/bootstrap.csproj
+++ b/lib/bootstrap/bootstrap.csproj
@@ -1,10 +1,11 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>netcoreapp3.1</TargetFramework>
+    <TargetFramework>net6.0</TargetFramework>
     <PreserveCompilationContext>true</PreserveCompilationContext>
     <AssemblyName>bootstrap</AssemblyName>
     <PackageId>bootstrap</PackageId>
+    <LangVersion>default</LangVersion>
   </PropertyGroup>
 
   <ItemGroup >
