--- a/src/double/Edge.js.CSharp/Edge.js.CSharp.csproj
+++ b/src/double/Edge.js.CSharp/Edge.js.CSharp.csproj
@@ -3,15 +3,16 @@
     <Description>Edge.js enables scripting CLR languages from Node.js. This package is a dependency of Edge.js and supports scripting C# from Node.</Description>
     <AssemblyTitle>C# compiler for Edge.js</AssemblyTitle>
     <VersionPrefix>1.2.0</VersionPrefix>
-    <TargetFramework>netcoreapp3.1</TargetFramework>
+    <TargetFramework>netstandard2.0</TargetFramework>
     <AssemblyName>Edge.js.CSharp</AssemblyName>
     <PackageId>Edge.js.CSharp</PackageId>
     <PackageProjectUrl>https://github.com/tjanczuk/edge</PackageProjectUrl>
     <PackageLicenseUrl>https://github.com/tjanczuk/edge-cs/blob/master/LICENSE.txt</PackageLicenseUrl>
     <LangVersion>default</LangVersion>
+    <Nullable>disable</Nullable>
   </PropertyGroup>
   <ItemGroup>
-    <PackageReference Include="Microsoft.CSharp" Version="4.5.0" />
-    <PackageReference Include="Microsoft.CodeAnalysis" Version="2.8.2" />
+    <PackageReference Include="Microsoft.CSharp" Version="4.7.0" />
+    <PackageReference Include="Microsoft.CodeAnalysis" Version="4.9.2" />
   </ItemGroup>
 </Project>
