--- a/package.json
+++ b/package.json
@@ -32,7 +32,7 @@
   "main": "./lib/edge.js",
   "types": "edge-js.d.ts",
   "engines": {
-    "npm" : ">=8.0.0",
+    "npm": ">=8.0.0",
     "node": ">=16.0.0"
   },
   "license": "MIT",
@@ -43,8 +43,11 @@
   "devDependencies": {
     "follow-redirects": "^1.15.6",
     "junit-report-merger": "6.0.3",
-    "mocha": "10.3.0",
+    "mocha": "10.4.0",
     "mocha-junit-reporter": "^2.2.1",
+    "mocha-multi-reporters": "^1.5.1",
+    "mochawesome": "^7.1.3",
+    "mochawesome-merge": "^4.3.0",
     "xunit-viewer": "^10.6.1"
   },
   "homepage": "https://github.com/agracio/edge-js",
