--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "mocha-multi-reporters": "^1.5.1",
     "mochawesome": "^7.1.3",
     "mochawesome-merge": "^4.3.0",
+    "mochawesome-report-generator": "^6.2.0",
     "xunit-viewer": "^10.6.1"
   },
   "homepage": "https://github.com/agracio/edge-js",
