simplifying CI run

--- a/appveyor.yml
+++ b/appveyor.yml
@@ -8,19 +8,19 @@ environment:
   matrix:
     # node.js
     - nodejs: "21"
-    - nodejs: "20"
-    - nodejs: "18"
-    - nodejs: "16"
+    # - nodejs: "20"
+    # - nodejs: "18"
+    # - nodejs: "16"
 
 install:
   - sh: if [ "$APPVEYOR_BUILD_WORKER_IMAGE" = 'Ubuntu2204' ]; then sudo apt-get -qq update && sudo apt-get -y -qq install build-essential libgconf-2-4 python3 libglib2.0-dev; fi
   - cmd: powershell .\appveyor.ps1  
-  - dotnet --version
   - cmd: powershell Update-NodeJsInstallation (Get-NodeJsLatestBuild $env:nodejs) x64
   - sh: nvm ls
   - sh: nvm install $nodejs
   - sh: nvm use $nodejs
-  - node -p "[process.version,process.arch].join(' ')"
+  - cmd: node -v && npm -v && dotnet --version
+  - sh: node -v && npm -v && dotnet --version
   - npm install -q
   - cmd: npm i -q  xunit-viewer >nul
   - sh: npm i xunit-viewer --silent &> /dev/null
