--- a/appveyor.yml
+++ b/appveyor.yml
@@ -1,5 +1,5 @@
 image:
-  #- Visual Studio 2015
+  - Visual Studio 2015
   - Ubuntu2204
   - macos-monterey
 
@@ -7,10 +7,10 @@ environment:
   DOTNET_CLI_TELEMETRY_OPTOUT: 1
   matrix:
     # node.js
-    #- nodejs: "21"
+    - nodejs: "21"
     - nodejs: "20"
-    #- nodejs: "18"
-    #- nodejs: "16"
+    - nodejs: "18"
+    - nodejs: "16"
 
 install:
   - sh: if [ "$APPVEYOR_BUILD_WORKER_IMAGE" = 'Ubuntu2204' ]; then sudo apt-get -qq update && sudo apt-get -y -qq install build-essential libgconf-2-4 python3 libglib2.0-dev; fi
