--- a/appveyor_double.yml
+++ b/appveyor_double.yml
@@ -1,6 +1,6 @@
 image:
   - Visual Studio 2019
- 
+
 environment:
   DOTNET_CLI_TELEMETRY_OPTOUT: 1
 
@@ -14,5 +14,6 @@ test_script:
 only_commits:
   files:
     - 'test/double'
+    - 'appveyor_double.yml'
 
 build: off
