--- a/appveyor_double.yml
+++ b/appveyor_double.yml
@@ -5,11 +5,11 @@ environment:
   DOTNET_CLI_TELEMETRY_OPTOUT: 1
 
 build_script:
-  - cmd: dotnet restore test/double/double_test/double_test.sln
-  - cmd: dotnet build test/double/double_test/double_test.sln --configuration Release
+  - dotnet restore test/double/double_test/double_test.sln
+  - dotnet build test/double/double_test/double_test.sln --configuration Release
 
 test_script:
-  - cmd: nunit3-console test/double/double_test/bin/Release/net462/double_test.dll --result=nunit_edge_double.xml;format=AppVeyor
+  - nunit3-console test/double/double_test/bin/Release/net462/double_test.dll --result=nunit_edge_double.xml;format=AppVeyor
 
 only_commits:
   files:
