--- a/appveyor_double.yml
+++ b/appveyor_double.yml
@@ -9,7 +9,11 @@ build_script:
   - dotnet build test/double/double_test/double_test.sln --configuration Release
 
 test_script:
-  - nunit3-console test/double/double_test/bin/Release/net462/double_test.dll --result=nunit_edge_double.xml;format=AppVeyor
+  - nunit3-console test/double/double_test/bin/Release/net462/double_test.dll --result=test-results.xml;format=AppVeyor
+
+after_test:
+  - ps: |
+      Push-AppveyorArtifact (Resolve-Path '.\test-results.xml')
 
 only_commits:
   files:
