updating CI build

--- a/appveyor.yml
+++ b/appveyor.yml
@@ -22,9 +22,10 @@ install:
   - cmd: node -v && npm -v && dotnet --version
   - sh: node -v && npm -v && dotnet --version
   - npm install -q
+  - cmd: echo npm install finished
 
 test_script:
-
+  - cmd: echo starting tests
   - cmd: node tools/test.js CI
   - cmd: SET EDGE_USE_CORECLR=1 & node tools/test.js CI
   - sh: EDGE_USE_CORECLR=1 node tools/test.js CI
