--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,91 +1,29 @@
 version: 2.1
-
 orbs:
-  node: circleci/node@5.2.0
-  win: circleci/windows@5.0.0
-  macos: circleci/macos@2.4.1
-
-executors:
-  # windows: # Docker using the Base Convenience Image
-  #   machine:
-  #     image: windows-server-2019:current
-  linux: 
-    machine:
-      image: ubuntu-2204:current
-  macos: 
-    macos:
-      xcode: 14.2.0
-refs:
-  steps:
-    - &InstallNode
-      node/install:
-        node-version: << parameters.node-version >>
-    - &InstallDotnet
-      run:
-        name: Install dotnet
-        command: |
-          if [[ $OSTYPE == darwin* ]]; then
-              /bin/bash -c "$(curl -fsSL https://raw.githubusercontent.com/Homebrew/install/HEAD/install.sh)"
-              brew install --cask dotnet-sdk
-          elif [[ $OSTYPE == linux* ]]; then
-            wget https://packages.microsoft.com/config/ubuntu/22.04/packages-microsoft-prod.deb -O packages-microsoft-prod.deb
-            sudo dpkg -i packages-microsoft-prod.deb
-            sudo apt-get update
-            sudo apt-get install -y dotnet-sdk-8.0
-            sudo rm packages-microsoft-prod.deb
-          fi
-    - &InstallDotnetLinux
-      run:
-        name: Install dotnet
-        command: |
-          wget https://packages.microsoft.com/config/ubuntu/22.04/packages-microsoft-prod.deb -O packages-microsoft-prod.deb
-          sudo dpkg -i packages-microsoft-prod.deb
-          sudo apt-get update
-          sudo apt-get install -y dotnet-sdk-8.0
-          sudo rm packages-microsoft-prod.deb
-    - &InstallDotnetMacos
-      run:
-        name: Install dotnet
-        command: |
-          /bin/bash -c "$(curl -fsSL https://raw.githubusercontent.com/Homebrew/install/HEAD/install.sh)"
-          brew install --cask dotnet-sdk
-    - &Versions
-      run:
-        name: Versions
-        command: node -v && npm -v && dotnet --version
-    - &NpmInstall
-      run:
-        name: NPM Install
-        command: npm install
-    - &Test
-      run:
-        name: Test
-        command: EDGE_USE_CORECLR=1 node tools/test.js --circleci
+  node: circleci/node@5
 jobs:
-  test:
-    parameters:
-      os:
-        type: executor
-      node-version:
-        type: string
-    executor: << parameters.os >>
+  test-node:
+    # Install node dependencies and run tests
+    executor: node/default
     steps:
-      - *InstallDotnet  
-      - *InstallNode  
-      - *Versions    
       - checkout
-      - *NpmInstall
-      - *Test
-      - store_test_results:
-          path: ./junit
-    # environment:
-    #   FOO: bar
+
+      - node/install-packages:
+          cache-path: ~/project/node_modules
+          override-ci-command: npm install
+
+      - run:
+          name: Run tests
+          command: EDGE_USE_CORECLR=1 node tools/test.js circleci --passWithNoTests
+
+      - store_artifacts:
+          path: ./mochawesome.json
+          destination: mochawesome.json
+
 workflows:
-  tests:
+  build-and-test:
     jobs:
-      - test:
-          matrix:
-            parameters:
-              os: ['linux']
-              node-version: ["18.19.1"]
-             
+      - test-node
+    # - deploy:
+    #     requires:
+    #       - test-node
