updating test config

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,13 +1,46 @@
 version: 2.1
 orbs:
   node: circleci/node@5
+
+refs:
+  steps:
+    - &InstallNode
+      node/install:
+        node-version: << parameters.node-version >>
+    - &InstallDotnet
+      run:
+        name: Install dotnet
+        command: |
+          if [[ $OSTYPE == darwin* ]]; then
+              /bin/bash -c "$(curl -fsSL https://raw.githubusercontent.com/Homebrew/install/HEAD/install.sh)"
+              brew install --cask dotnet-sdk
+          elif [[ $OSTYPE == linux* ]]; then
+            wget https://packages.microsoft.com/config/ubuntu/22.04/packages-microsoft-prod.deb -O packages-microsoft-prod.deb
+            sudo dpkg -i packages-microsoft-prod.deb
+            sudo apt-get update
+            sudo apt-get install -y dotnet-sdk-8.0
+            sudo rm packages-microsoft-prod.deb
+          fi
+    - &Versions
+      run:
+        name: Versions
+        command: node -v && npm -v && dotnet --version
+    - &NpmInstall
+      run:
+        name: NPM Install
+        command: npm install
+    - &Test
+      run:
+        name: Test
+        command: EDGE_USE_CORECLR=1 node tools/test.js --circleci
+
 jobs:
   test-node:
     # Install node dependencies and run tests
     executor: node/default
     steps:
       - checkout
-
+      - *InstallDotnet
       - node/install-packages:
           cache-path: ~/project/node_modules
           override-ci-command: npm install
