--- a/appveyor.yml
+++ b/appveyor.yml
@@ -17,15 +17,12 @@ install:
   # - cmd: powershell .\appveyor.ps1  
   - cmd: powershell Update-NodeJsInstallation (Get-NodeJsLatestBuild $env:nodejs) x64
   - sh: nvm ls
-  - sh: nvm install $nodejs
-  - sh: nvm use $nodejs
+  - sh: nvm use $nodejs || nvm install $nodejs
   - cmd: node -v && npm -v && dotnet --version
   - sh: node -v && npm -v && dotnet --version
   - npm install -q
-  - cmd: echo npm install finished
 
 test_script:
-  - cmd: echo starting tests
   - cmd: node tools/test.js CI
   - cmd: SET EDGE_USE_CORECLR=1 & node tools/test.js CI
   - sh: EDGE_USE_CORECLR=1 node tools/test.js CI
