--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -8,6 +8,7 @@ executors:
   node: 
     docker:
       - image: node/default
+    resource_class: medium
   windows: 
     machine:
       image: windows-server-2022-gui:current
@@ -15,7 +16,6 @@ executors:
   macos: 
     macos:
       xcode: 15.2.0
-    resource_class: macos.m1.medium.gen1
 
 refs:
   steps:
