--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -69,9 +69,9 @@ jobs:
       - checkout
       - restore_cache:
           keys: 
-          - v1-deps-{{ arch }}-{{ checksum "package-lock.json" }}
-          - v1-deps-{{ arch }}
-          - v1-deps
+          - v1-deps-{{ arch }}-{{ checksum "package.json" }}
+          # - v1-deps-{{ arch }}
+          # - v1-deps
       - *InstallDotnet
       # - node/install-packages:
       #     cache-path: ~/project/node_modules
@@ -79,7 +79,7 @@ jobs:
       - *Versions
       - run: npm install 
       - save_cache:
-          key: v1-deps-{{ arch }}-{{ checksum "package-lock.json" }}
+          key: v1-deps-{{ arch }}-{{ checksum "package.json" }}
           paths: 
             - node_modules
       - *Test
