--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -70,8 +70,6 @@ jobs:
       - restore_cache:
           keys: 
           - v1-deps-{{ arch }}-{{ checksum "package.json" }}
-          # - v1-deps-{{ arch }}
-          # - v1-deps
       - *InstallDotnet
       # - node/install-packages:
       #     cache-path: ~/project/node_modules
@@ -98,7 +96,5 @@ workflows:
       - test-node:
           matrix:
             parameters:
-              # os: ['node', 'windows', 'macos']
-              os: ['node']
-
+              os: ['node', 'windows', 'macos']
 
