--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -88,7 +88,7 @@ jobs:
         if: success()
         with:
           name: Tests (${{ matrix.os }}, ${{ matrix.node }})  # Name of the check run which will be created
-          path: mochawesome.json   # Path to test results
-          reporter: mochawesome-json
+          path: test-results.xml   # Path to test results
+          reporter: jest-junit 
           fail-on-error: false        
 
